adjust style of  fontsize , linehight

--- a/blog/2023-10-27.mdx
+++ b/blog/2023-10-27.mdx
@@ -16,7 +16,11 @@ isDraft: false
   - 测试列表 003001
   - 测试列表 003002
 - 测试列表 004
-  `console.log(window.devicePixelRatio)`
+  `vim`
+
+```javascript
+console.log(window.devicePixelRatio, 12312312312);
+```
 
 ```javascript
 let a = 100;
