article: 前端开发中的长度单位

--- a/blog/2023-10-27.mdx
+++ b/blog/2023-10-27.mdx
@@ -9,39 +9,41 @@ category: 技术
 isDraft: false
 ---
 
-### 三个概念:物理像素 设备像素 CSS 像素
+### 布局
 
-- 测试列表 001
-- 测试列表 002
-  - 测试列表 003001
-  - 测试列表 003002
-- 测试列表 004
-  `vim`
+在前端开发中，布局是关键的一步。今天主要从不同屏幕尺寸适配的角度聊聊。我们的屏幕尺寸目前主要可以分为三大类: 手机(phone)、平板(pad) 、桌面(pc)，适配主要有两个目标:
 
-```javascript
-console.log(window.devicePixelRatio, 12312312312);
+- 页面上的各个模块相对位置一致（等比缩放）
+- 由于三种屏幕尺寸差异相对较大，次优的方案各个屏幕需要进一步单独优化，最优的方案，做三套方案
+
+本文只讨论第一个目标。
+
+### 宽度
+
+这个问题抛开历史来谈很简单，我们只要将设备的宽度和设计稿的宽度等比例缩放即可。复杂性出现在移动设备出现时候我们已经有大量的存量网站。移动端的设备需要考虑兼容已有 pc 网站，再不更改原有网站的情况下，至少实现基本可用。
+
+这里引入一个新问题，就是宽度的度量单位，这个问题本来不是很重要只是个名字不管是 px 还是 dp 还是 pt 只要和设计稿一致，可以换算就行。
+
+我们先看看浏览器使用的方案，及其带来的复杂性。说实话，设计有点巧妙，但是确实带来很大的复杂性，我猜初入行的同学大概很多捋不太清楚。
+该方案引入了一个`viewport`的概念，还有三个伴生概念
+
+- 布局视口（layout viewport）
+- 视觉视口（visual viewport）
+- 理想视口（ideal viewport）
+
+简单来说布局视口就是宽度为 100vw 的时候的宽度（就是一个 div 的默认宽度），视觉视口就是屏幕的宽度。为了适配已有 pc 网站，通常默认的布局视口宽度是 980px，此时视觉视口可能是 375px,此时通常需要左右滚动来来查看全部页面。而理想视口就是布局视口和视觉视口一致，没有滚动条用户体验最好。
+
+简单看一下具体的设置方式
+
+```html
+<meta
+  name="viewport"
+  content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+/>
 ```
 
-```javascript
-let a = 100;
-let b = 100;
-function foo() {
-  console.log(a);
-  console.log(b);
-}
-```
+简单解释一下，其中两个属性使用的较多 width 和 initial-scale,device-width 这个默认值是因为浏览器默认设置了视口的宽度，这个设置的效果只是让布局视口和视觉视口一致。缩放顾名思义，原来屏幕宽度 375px ,缩放为 0.5，那屏幕宽度就变成 750px.只要布局宽度和视觉宽度一致，不管这个宽度是 375px，还是 750px,还是 980px，都没什么实质的影响，因为只要等比例缩放，同一个设备各个模块物理像素是保持不变的。
 
-不管是移动端的浏览器还是 PC 端的浏览器,在宽度的表现上是一致的.为了将宽度说明白,需要先介绍三个概念. 物理像素, 设备像素, CSS 像素. 虽然然都是像素,但是所指不同.只有物理像素是客观的,无法通过程序手动修改(理所当然的),是由显卡的性能决定的.而设备像素和 CSS 像素都是人为了某种特定的目的而规定的.window 系统的电脑,控制面板,大家很熟悉的屏幕分辨率的设置,这里的分辨率就是设备像素.而 CSS 像素主要是为了布局而设置的,和 rem em 本质上是一种相对长度单位.
+倒是有个实际的意义，传说中的 1 像素问题。因为等比例缩放原因，如果设计稿是 750px，那么在 设备视觉视口 375px 的情况下，1px 就是 0.5px 了，甚至 0.25px，0.1px，0.01px 都是有可能的（在不同的设计稿和视觉视口的宽度下）。而各端对于这些数值支持不太友好，甚至直接不支持小于 1px 的值。这个时候缩放的用处就体现了。基本的原理就是换算过来的时候保证最小的可能宽度也大于 1px.如果用历史的眼光看，我觉得这个更多像是浏览器本身需要优化的地方。
 
-### CSS 像素的设置
-
-- 测试列表 001
-- 测试列表 002
-  - 测试列表 003001
-  - 测试列表 003002
-- 测试列表 004
-
-上面提到 CSS 像素是一个相对长度单位,那他的参照物是什么呢?或者说他的参照物的选取要遵循什么样的原则呢?只有一个原则,哪种选择对不同尺寸的电脑或者移动端更适配,更友好,获得的体验更一致.
-第一个选择,物理像素,首先落选,因为物理像素无法更改,这会导致浏览器环境最大的复杂性.
-第二个选择 设备像素, 设备像素和屏幕尺寸相关.一般屏幕尺寸越大其默认的设备像素越大;
-在没有缩放的时候,1 CSS 像素和 1 设备像素
+整体评价一下，移动端适配充斥了 css 像素设备独立像素，物理像素，逻辑像素等等之类的概念，基本感觉增加心智负担。如果简单总结一下，我们这样来理解设计稿，设计稿有两个概念，一个是元素在屏幕上占据的宽度，一个是同样宽度下的清晰度。
