article: 前端开发中的长度单位-补记

--- a/blog/2023-10-27.mdx
+++ b/blog/2023-10-27.mdx
@@ -31,7 +31,7 @@ isDraft: false
 - 视觉视口（visual viewport）
 - 理想视口（ideal viewport）
 
-简单来说布局视口就是宽度为 100vw 的时候的宽度（就是一个 div 的默认宽度），视觉视口就是屏幕的宽度。为了适配已有 pc 网站，通常默认的布局视口宽度是 980px，此时视觉视口可能是 375px,此时通常需要左右滚动来来查看全部页面。而理想视口就是布局视口和视觉视口一致，没有滚动条用户体验最好。
+简单来说布局视口就是宽度为 100% 的时候的宽度，视觉视口就是屏幕的宽度。为了适配已有 pc 网站，通常默认的布局视口宽度是 980px，此时视觉视口可能是 375px,此时通常需要左右滚动来来查看全部页面。而理想视口就是布局视口和视觉视口一致，没有滚动条用户体验最好。
 
 简单看一下具体的设置方式
 
